--- a/src/css/quote.css
+++ b/src/css/quote.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-     
+     width: 100%;
     background-color: #6555b8;
 }
 .big-border {
@@ -46,9 +46,12 @@
     background-color: #3e8e41;
   }
   /* Media query for smaller screens */
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .big-border{
 border: 20px;
 margin: 20px;
+  }
+  .quote-head{
+    font-size: large;
   }
 }
